# [#19288] Fix regression - too big avatar show in top and bottom avatar position. # [#19288] Fix regression - Number of Popular Polls in statistics. ^ [#19345] Increased maxlenth for Poll Title (25 -> 100) and Options (25 -> 50), and added size to input. + [#19345] Restyled Frontstats plugin - added stats icon
git-svn-id: file:///Users/oratzes/svn/kunena@2451 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/branches/1.6-@quila/1.6/components/com_kunena/template/default/css/images.css
+++ b/branches/1.6-@quila/1.6/components/com_kunena/template/default/css/images.css
@@ -236,5 +236,12 @@ div#kprofile-stats ul li span.rank-admin {
 ------------------------------------------------------------------- */
 
 #Kunena .whoicon {
-	background: url("../images/who_is_online.png") no-repeat center top;
+	background: url("../images/icons/who_is_online.png") no-repeat center top;
+}
+
+/* 		FRONTSTATS
+------------------------------------------------------------------- */
+
+#Kunena .statsicon {
+	background: url("../images/icons/stats.png") no-repeat center top;
 }
