--- a/branches/1.6-@quila/1.6/components/com_kunena/template/default/css/plugin.css
+++ b/branches/1.6-@quila/1.6/components/com_kunena/template/default/css/plugin.css
@@ -52,6 +52,11 @@
 	text-align:center;
 }
 
+#Kunena .statsicon {
+	min-width: 32px;
+	min-height: 32px;
+}
+
 /* 		WHO IS ONLINE
 ------------------------------------------------------------------- */
 
